--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <h1>Questionário</h1>
+    <u><i><h1>Questionário</h1></i></u>
 
     <b>Questão 1: Explique qual é a função de um servidor web em um ambiente de hospedagem e cite pelo menos um exemplo.</b> <br /><br />
     <b>R:</b><font color="RED"> Lidar com requisições HTTP/HTTPS e servem conteúdo estático (HTML, CSS, JS, imagens). Exemplo: Apache HTTP Server.</font>
